--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="top-head">
             <div class="container">
                 <div class="top-header d-flex justify-content-between pt-2">
-                    <div class="text-white fw-bold">Welcome to beatles</div>
+                    <div class="text-white fw-bold"><p>Welcome to beatles</p></div>
                     <div>
                         <ul class="top-head-ul d-flex ">
                             <li class="ms-2"><a href="#"><i class="fa-brands fa-facebook-f text-white hover-red"></i></a></li>
