--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/responsive.css" />
     <title>Beatls || landing page.</title>
   </head>
   <body>
@@ -15,7 +16,7 @@
           <div class="hero_con text-white">
             <p>Welcome to beatles</p>
           </div>
-          <ul class="hero_icon d-flex gap-4">
+          <ul class="hero_icon gap-2 gap-sm-4 d-flex">
             <li>
               <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
             </li>
@@ -84,21 +85,18 @@
     <section class="hero_part">
       <div class="container">
         <div class="hero_con_main">
-          <div class="row">
-            <div class="col-6"></div>
-            <div class="col-6">
-              <div class="hero_con text-end">
-                <h2>Hi we are</h2>
-                <h1>Creative Designer</h1>
-                <p class="py-3">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis
-                  incidunt sed consectetur est sit dolorem exercitationem unde
-                  amet reprehenderit obcaecati.
-                </p>
-                <div class="hero_btn">
-                  <a href="#" class="btn btn-primary">Hire me</a>
-                  <a href="#" class="btn btn-primary">Contact</a>
-                </div>
+          <div class="hero_col">
+            <div class="hero_con text-end">
+              <h2>Hi we are</h2>
+              <h1>Creative Designer</h1>
+              <p class="py-3">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis
+                incidunt sed consectetur est sit dolorem exercitationem unde
+                amet reprehenderit obcaecati.
+              </p>
+              <div class="hero_btn">
+                <a href="#" class="btn btn-primary">Hire me</a>
+                <a href="#" class="btn btn-primary">Contact</a>
               </div>
             </div>
           </div>
@@ -122,7 +120,7 @@
           </div>
         </div>
         <div class="about_con_main">
-          <div class="row align-items-center">
+          <div class="row about_row align-items-center">
             <div class="col-5">
               <div class="about_img">
                 <img class="w-100" src="/images/man-img.jpg" alt="" />
@@ -138,7 +136,7 @@
                   laboriosam. Quia blanditiis iusto dolor pariatur, sapiente
                   quod?
                 </p>
-                <p>
+                <p class="last_p">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Beatae ut perferendis illum, quibusdam earum animi deserus
                   dignissimos perspiciatis quaerat sunt, unde exercitationem
@@ -171,7 +169,7 @@
 
         <div class="service_con_main pt-5">
           <div class="row">
-            <div class="col-4">
+            <div class="col-12 col-sm-4">
               <div class="service_con">
                 <div class="service_icon">
                   <img src="/images/icon-1.jpg" alt="" />
@@ -183,7 +181,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-sm-4">
               <div class="service_con">
                 <div class="service_icon">
                   <img src="/images/icon-2.jpg" alt="" />
@@ -195,7 +193,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-sm-4">
               <div class="service_con">
                 <div class="service_icon">
                   <img src="/images/icon-3.jpg" alt="" />
@@ -230,7 +228,7 @@
 
         <div class="port_con_main">
           <div class="row">
-            <div class="col-3">
+            <div class="col-12 col-sm-6 col-md-3">
               <div class="port_con">
                 <img class="w-100" src="/images/photo-1.jpg" alt="" />
                 <div class="port_img_overlay">
@@ -245,7 +243,7 @@
               </div>
             </div>
 
-            <div class="col-3">
+            <div class="col-12 col-sm-6 col-md-3">
               <div class="port_con">
                 <img class="w-100" src="/images/photo-4.jpg" alt="" />
                 <div class="port_img_overlay">
@@ -259,7 +257,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-sm-6 col-md-3">
               <div class="port_con">
                 <img class="w-100" src="/images/photo-6.jpg" alt="" />
                 <div class="port_img_overlay">
@@ -273,7 +271,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-sm-6 col-md-3">
               <div class="port_con">
                 <img class="w-100" src="/images/photo-7.jpg" alt="" />
                 <div class="port_img_overlay">
@@ -311,7 +309,7 @@
 
         <div class="team_con_main">
           <div class="row">
-            <div class="col-3 text-center">
+            <div class="col-12 col-sm-6 col-md-3 text-center">
               <div class="team_con text-center">
                 <div class="team_con_img">
                   <img class="w-100" src="/images/team-1.jpg" alt="" />
@@ -334,7 +332,7 @@
               <h4 class="text-uppercase mt-2">Sajal Khan</h4>
               <p class="">Web Developer</p>
             </div>
-            <div class="col-3 text-center">
+            <div class="col-12 col-sm-6 col-md-3 text-center">
               <div class="team_con text-center">
                 <div class="team_con_img">
                   <img class="w-100" src="/images/team-2.jpg" alt="" />
@@ -357,7 +355,7 @@
               <h4 class="text-uppercase mt-2">Sajal Khan</h4>
               <p class="">Web Developer</p>
             </div>
-            <div class="col-3 text-center">
+            <div class="col-12 col-sm-6 col-md-3 text-center">
               <div class="team_con text-center">
                 <div class="team_con_img">
                   <img class="w-100" src="/images/team-3.jpg" alt="" />
@@ -380,7 +378,7 @@
               <h4 class="text-uppercase mt-2">Sajal Khan</h4>
               <p class="">Web Developer</p>
             </div>
-            <div class="col-3 text-center">
+            <div class="col-12 col-sm-6 col-md-3 text-center">
               <div class="team_con text-center">
                 <div class="team_con_img">
                   <img class="w-100" src="/images/team-4.jpg" alt="" />
@@ -426,7 +424,7 @@
 
         <div class="testimonial_con_main">
           <div class="row">
-            <div class="col-6 text-center">
+            <div class="col-12 col-sm-6 text-center testi_p">
               <div class="testimonial_con_img mb-5">
                 <img class="" src="/images/man-3.jpg" alt="" />
               </div>
@@ -450,7 +448,7 @@
                     <a href="#"><i class="fa-solid fa-star-half"></i></a>
                   </li>
                 </ul>
-                <p class="">
+                <p class="testi_paragraph">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
                   do eiusmod tempor incidunt ut labore et dolore magna aliqua.
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -458,7 +456,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-6 text-center">
+            <div class="col-12 col-sm-6 text-center">
               <div class="testimonial_con_img mb-5">
                 <img class="" src="/images/man-1.jpg" alt="" />
               </div>
@@ -502,7 +500,7 @@
       <div class="container">
         <div class="footer_con_main">
           <div class="row">
-            <div class="col-3">
+            <div class="col-12 col-sm-6 col-md-3">
               <div class="footer_img mb-4">
                 <img src="/images/ffff.png" alt="" />
               </div>
@@ -512,7 +510,7 @@
               </p>
               <p>Lorem ipsum dolor sit amet, conser adipisicing elit, sed do</p>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-sm-6 col-md-3">
               <h4 class="">Contact Us</h4>
               <div class="contact_con_main d-flex flex-column gap-4 mt-5">
                 <div class="contact_con d-flex gap-4 align-items-center">
@@ -544,7 +542,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-2">
+            <div class="col-12 col-sm-6 col-md-2">
               <div class="link_con_main">
                 <h4>Important Link</h4>
                 <div class="link_ul d-flex gap-4">
@@ -570,7 +568,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-12 col-sm-6 col-md-4">
               <h4>Fliker Photo</h4>
               <div class="footer_con_img mt-5">
                 <div class="row">
